--- a/SimpleCalculator/SimpleCalculator.csproj
+++ b/SimpleCalculator/SimpleCalculator.csproj
@@ -50,9 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CalcLibrary\CalcLibrary.csproj">
-      <Project>{645293e8-34fb-4158-b0d5-d76bf1a9568b}</Project>
-      <Name>CalcLibrary</Name>
+    <ProjectReference Include="..\CalculatorEngine\CalcEngineLibrary.csproj">
+      <Project>{0603fd6f-19f0-47e1-b20c-4ce42f8a7d99}</Project>
+      <Name>CalcEngineLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\InputConverter\InputConverter.csproj">
       <Project>{36ea3cb7-1291-401f-8840-920a5c07a2f8}</Project>
