put classes name instead of using object in the testing classes

--- a/SimpleCalculator.Test.Unit/SimpleCalculator.Test.Unit.csproj
+++ b/SimpleCalculator.Test.Unit/SimpleCalculator.Test.Unit.csproj
@@ -57,6 +57,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CalcLibrary\CalcLibrary.csproj">
+      <Project>{aaff4a44-d808-4537-886e-a55dc7d2dcc0}</Project>
+      <Name>CalcLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj">
       <Project>{5b1e5e51-a8d6-4a82-8344-831c86cc2468}</Project>
       <Name>SimpleCalculator</Name>
