--- a/SimpleCalculator.Test.Unit/SimpleCalculator.Test.Unit.csproj
+++ b/SimpleCalculator.Test.Unit/SimpleCalculator.Test.Unit.csproj
@@ -57,6 +57,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CalcTools\CalcTools.csproj">
+      <Project>{74133c5b-d69d-4671-8cd8-a20c46ae7114}</Project>
+      <Name>CalcTools</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InputConverter\InputConverter.csproj">
+      <Project>{36ea3cb7-1291-401f-8840-920a5c07a2f8}</Project>
+      <Name>InputConverter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj">
       <Project>{5b1e5e51-a8d6-4a82-8344-831c86cc2468}</Project>
       <Name>SimpleCalculator</Name>
